singletons-base/tests/compile-and-dump/Singletons/T401.hs
module T401 where

import Data.Singletons.TH

$(singletons [d|
  f :: (forall a. a -> a) -> b -> b
  f _ x = x
  |])
